feat: #1557 Added RefreshAccessToken method for refresh token generation. Refactored google token store.
