# mw-general-bff/apiAutogenerated/mw-general-bff/api/openapi.yaml
@@ -69,6 +69,19 @@ paths:
       summary: Logout current authorized user
       tags:
       - auth
+  /auth/refreshToken:
+    get:
+      operationId: refresh-access-token
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/mw-general-bff_apiAutogenerated_general.MwServerInternalSchemasRefreshAccessTokenResponse'
+          description: OK
+      summary: Retrieve Access Token
+      tags:
+      - auth
   /auth/{provider}:
     get:
       operationId: begin-auth
@@ -3065,6 +3078,13 @@ components:
           items:
             $ref: '#/components/schemas/mw-general-bff_apiAutogenerated_general.MwServerInternalSchemasWayPlainResponse'
           type: array
+      type: object
+    mw-general-bff_apiAutogenerated_general.MwServerInternalSchemasRefreshAccessTokenResponse:
+      example:
+        accessToken: accessToken
+      properties:
+        accessToken:
+          type: string
       type: object
     mw-general-bff_apiAutogenerated_general.MwServerInternalSchemasTimeSpentByDayPoint:
       example:
