# mw-webapp/src/apiAutogenerated/general/models/index.ts
@@ -61,6 +61,7 @@ export * from './MwServerInternalSchemasPlanPopulatedResponse';
 export * from './MwServerInternalSchemasProblemPopulatedResponse';
 export * from './MwServerInternalSchemasProjectPlainResponse';
 export * from './MwServerInternalSchemasProjectPopulatedResponse';
+export * from './MwServerInternalSchemasRefreshAccessTokenResponse';
 export * from './MwServerInternalSchemasTimeSpentByDayPoint';
 export * from './MwServerInternalSchemasToUserMentoringRequestResponse';
 export * from './MwServerInternalSchemasUpdateCommentPayload';
